--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Kubernetes Whitepaper Proposal Presentation</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -16,8 +16,60 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				 <!-- Title Slide -->
+				<section>
+					Kubernetes for small business
+				</section>
+
+				<!-- Contents slides -->
+				<section data-auto-animate>
+					<h1>Summary</h1>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Summary</h1>
+					<ol style="align-items: flex-start;">
+						<li>Problem: Description and Features</li>
+					</ol>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Summary</h1>
+					<ol style="align-items: flex-start;">
+						<li>Problem: Description and Features</li>
+						<li>Solution: Proposed Whitepaper</li>
+					</ol>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Summary</h1>
+					<ol style="align-items: flex-start;">
+						<li>Problem: Description and Features</li>
+						<li>Solution: Proposed Whitepaper</li>
+						<li>Conclusion</li>
+					</ol>
+				</section>
+
+				<!-- Problem Description -->
+				<section>
+					Problem Description
+				</section>
+				<section>
+					<ul>
+						<li>SmallCompany is launching their business this Spring</li>
+						<li>SmallCompany needs IT deployment</li>
+					</ul>
+				</section>
+
+				<!-- Proposed Whitepaper -->
+				<section>
+					Proposed Whitepaper
+				</section>
+
+				<!-- Conclusion -->
+				<section>
+					summary
+				</section>
+				<section>
+					Call to action
+				</section>
 			</div>
 		</div>
 
