--- a/index.html
+++ b/index.html
@@ -18,57 +18,231 @@
 			<div class="slides">
 				 <!-- Title Slide -->
 				<section>
-					Kubernetes for small business
+					SmallCompany Whitepaper Proposal
+					<p>Pipe Dream Consulting</p>
+					<sub>Emil Harvey</sub>
 				</section>
 
-				<!-- Contents slides -->
+				<!-- Summary Description -->
 				<section data-auto-animate>
-					<h1>Summary</h1>
-				</section>
-				<section data-auto-animate>
-					<h1 style="font-size: 1.5em;">Summary</h1>
-					<ol style="align-items: flex-start;">
-						<li>Problem: Description and Features</li>
-					</ol>
-				</section>
-				<section data-auto-animate>
-					<h1 style="font-size: 1.5em;">Summary</h1>
-					<ol style="align-items: flex-start;">
-						<li>Problem: Description and Features</li>
-						<li>Solution: Proposed Whitepaper</li>
-					</ol>
-				</section>
-				<section data-auto-animate>
-					<h1 style="font-size: 1.5em;">Summary</h1>
-					<ol style="align-items: flex-start;">
-						<li>Problem: Description and Features</li>
-						<li>Solution: Proposed Whitepaper</li>
-						<li>Conclusion</li>
-					</ol>
-				</section>
-
-				<!-- Problem Description -->
-				<section>
-					Problem Description
-				</section>
-				<section>
+					<h2>Table of Contents</h2>
 					<ul>
-						<li>SmallCompany is launching their business this Spring</li>
-						<li>SmallCompany needs IT deployment</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Table of Contents</h2>
+					<ul>
+						<li>Problem Description</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Table of Contents</h2>
+					<ul>
+						<li>Problem Description</li>
+						<li>Whitepaper Proposition</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Table of Contents</h2>
+					<ul>
+						<li>Problem Description</li>
+						<li>Whitepaper Proposition</li>
+						<li>Next Steps</li>
 					</ul>
 				</section>
 
-				<!-- Proposed Whitepaper -->
+				<!-- Problem Description -->
+				<section data-auto-animate>
+					<h2>Problem Description</h2>
+					<ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Problem Description</h2>
+					<ul>
+						<li>SmallCompany is investigating Kubernetes...</li>
+						<ul>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Problem Description</h2>
+					<ul>
+						<li>SmallCompany is investigating Kubernetes...</li>
+						<ul>
+							<li>...to launch their software services</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Problem Description</h2>
+					<ul>
+						<li>SmallCompany is investigating Kubernetes...</li>
+						<ul>
+							<li>...to launch their software services</li>
+							<li>...to keep costs down</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Problem Description</h2>
+					<ul>
+						<li>SmallCompany is investigating Kubernetes...</li>
+						<ul>
+							<li>...to launch their software services</li>
+							<li>...to keep costs down</li>
+							<li>...to remain Agile</li>
+						</ul>
+					</ul>
+				</section>
+
 				<section>
-					Proposed Whitepaper
+					Kubernetes is here to stay...
+					<img src="costs.svg" />
+				</section>
+
+				<!-- Proposition Summary slides -->
+				<section data-auto-animate>
+					<h1>Proposition: 2 Rs</h1>
+				</section>
+				<section data-auto-animate>
+					<h1>Proposition: 2 Rs</h1>
+					<h4>Our whitepaper will provide...</h4>
+				</section>
+
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Proposition: 2 Rs</h1>
+					<h4>Our whitepaper will provide...</h4>
+					<ul style="align-items: flex-start;">
+						<li>Requirements: What is needed to run Kubernetes?</li>
+					</ul>
+				</section>
+				
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Proposition: 2 Rs</h1>
+					<h4>Our whitepaper will provide...</h4>
+					<ul style="align-items: flex-start;">
+						<li>Requirements: What is needed to run Kubernetes?</li>
+						<li>Review: What are current Kubernetes distributions?</li>
+					</ul>
+				</section>
+
+
+				<!-- Proposed Whitepaper -->
+				<section data-auto-animate>
+					<h1>Requirements</h1>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<ul>
+							<li>Hardware</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<ul>
+							<li>Hardware</li>
+							<li>Software</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<ul>
+							<li>Hardware</li>
+							<li>Software</li>
+							<li>Personnel</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<li>Unconventional</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<li>Unconventional</li>
+						<ul>
+							<li>Server hardware</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Requirements</h1>
+					<ul style="align-items: flex-start;">
+						<li>Holistic</li>
+						<li>Unconventional</li>
+						<ul>
+							<li>Server hardware</li>
+							<li>Consumer hardware</li>
+						</ul>
+					</ul>
+				</section>
+				<section>
+					Pets vs Cattle
+					<img src="petsvscows.svg" />
+				</section>
+
+				<section data-auto-animate>
+					<h1 style>Review</h1>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Review</h1>
+					<ul style="align-items: flex-start;">
+						<li>Comprehensive</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Review</h1>
+					<ul style="align-items: flex-start;">
+						<li>Comprehensive</li>
+						<ul>
+							<li>MicroK8s</li>
+							<li style="opacity: 0.6;">Charmed Kubernetes</li>
+							<li style="opacity: 0.4;">OpenShift</li>
+							<li style="opacity: 0.2;">etc</li>
+						</ul>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h1 style="font-size: 1.5em;">Review</h1>
+					<ul style="align-items: flex-start;">
+						<li>Comprehensive</li>
+						<li>Objective</li>
+					</ul>
 				</section>
 
 				<!-- Conclusion -->
 				<section>
-					summary
+					<h1>Next Steps</h1>
+					<ul>
+						<li>Read our proposal</li>
+						<li>Book a meeting at whitepapers@PipeDream.com</li>
+					</ul>
 				</section>
+
 				<section>
-					Call to action
+					Thank you!
+					<br/>
+					<sub>Any questions?</sub>
 				</section>
 			</div>
 		</div>
